--- a/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasing_management_index.html
@@ -144,21 +144,43 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li>
+                                    <a href="purchasin_management_return_drug" target="iframe">
+                                       退货单维护
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="purchasing_management_return_form" target="iframe">
                                         添加退货单
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="purchasin_management_return_drug" target="iframe">
+                                    <a href="purchasin_management_settlement_management" target="iframe">
                                         添加退货药品
                                     </a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="purchasin_management_settlement_management" target="iframe">
-                                <i class="fa fa-circle-o"></i> 结算管理
+                            <a href="#">
+                                <span>结算管理</span>
                             </a>
+                            <ul class="treeview-menu">
+                                <li>
+                                    <a href="purchasin_management_return_drug" target="iframe">
+                                        结算单维护
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="purchasing_management_add_statement" target="iframe">
+                                        添加结算单
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="purchasin_management_settlement_management" target="iframe">
+                                        添加结算药品
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="new_case_management_form.jsp" target="iframe">
