--- a/src/main/resources/templates/supplymanagement/druginformation.html
+++ b/src/main/resources/templates/supplymanagement/druginformation.html
@@ -108,7 +108,7 @@
                 $("#drug_category_id").prepend('<option value="0">请选择</option>')
                 for(var i=0;i<result.data.length;i++){
                     var list=result.data;
-                    $("#drug_category_id").prepend('<option value="' + list[i].id + '">' + list[i].drugCategoryName + '</option>')
+                    $("#drug_category_id").prepend('<option value="' + list[i].drugCateGoryId + '">' + list[i].drugCategoryName + '</option>')
                 }
             }
         })
